src/form.css
input, textarea {
  font-size: 1em;
  /* max-width: 100%; */
}

input[type="text"] {
  width: 100%;
  flex-shrink: 1;
}

input[type="checkbox"] {
  accent-color: black;
}

.form {
  position: relative;
  display: grid;
  gap: 2em 1em;
  box-sizing: border-box;
  padding: 3em;
  height: 100%;
  background-color: #fff;

  grid-template-columns: 50% 50%;
  grid-template-rows: repeat(auto, 4);

  grid-template-areas:
    'avatar header'
    'apologist date'
    'reason reason'
    'apology apology';
}

.apologist {
  display: flex;
  align-items: flex-start;

  &>*:first-child {
    flex-shrink: 0;
  }

}

.avatar {
  grid-area: avatar;

  & img {
    width: 100%;
    aspect-ratio: 1 / 1;
  }
}

.header {
  grid-area: header;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.5em;
}

.reason {
  grid-area: reason;
}

.other {
  display: flex;
}

.items {
  columns: 2;
  padding: 0;
  list-style: none;
  margin-block: 0.5em;
}



.items li, .other>span {
  position: relative;
  padding-left: 2ch;

  &::before {
    content: '';
    position: absolute;
    left: 0;
    top: 3px;
    width: 1em;
    height: 1em;
    background-repeat: no-repeat;
    background-image: url("data:image/svg+xml;utf8,<svg viewBox='0 0 11 14' fill='none' xmlns='http://www.w3.org/2000/svg'><rect x='0.5' y='4.5' width='9' height='9' rx='0.5' stroke='black'/></svg>");
  }

  &.checked::before {
    background-image: url("data:image/svg+xml;utf8,<svg viewBox='0 0 11 14' fill='none' xmlns='http://www.w3.org/2000/svg'><rect x='0.5' y='4.5' width='9' height='9' rx='0.5' stroke='black'/><path d='M2 8L5 11.5L10 1.5' stroke='black' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/></svg>");
  }

}

.items.editing li {
  display: flex;
  padding-left: 0;
  gap: 0.5ch;

  &::before {
    display: none;
  }
}

.items>li+li {
  margin-top: 0.5em;
}

.apology {
  /* display: flex;
  flex-direction: column;
  justify-content: end; */

  height: 7ch;


  grid-area: apology;
  text-align: center;

  & p {
    margin-block: .5em;
  }

  & textarea {
    width: 100%;
    height: 100%;
  }
}


.surround-space {

  &::after,
  &::before {
    content: ' ';
    text-decoration: none;
  }
}

.field {
  margin-inline: .5ch;
  text-decoration: underline;

  &::before, &::after {
    content: ' ';
  }

}

.submit {
  position: absolute;
  bottom: 0em;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  padding: 1em;
  gap: 1ch;

  & > button {
    padding: .2em .5em;
    font-size: 1em;
  }
}

